# PyTorch-for-Deep-Learning

./: .gitignore  1_simple_nn_test.ipynb  2_tensor_maths_concepts.ipynb  C1M1_Assignment.ipynb  C1_M1_Lab_1_simple_nn.ipynb  C1_M1_Lab_2_activation_functions.ipynb  C1_M1_Lab_3_tensors.ipynb  C1_M2_Lab_1_mnist_classifier.ipynb  helper_utils.py  main.py  neural_network_diagram  notes.txt  pyproject.toml  requirements.txt
