[project]
name = "pytorch-for-deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib==3.9.0",
    "numpy==2.3.2",
    "pandas==2.3.3",
    "pillow==11.3.0",
    "python-dotenv>=1.2.1",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchviz>=0.0.3",
]
